--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,5 +26,8 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          push: true
-          tags: manoj201/scaniatest:latest
+          push: false
+
+      - name: Run Docker container
+        run: |
+          docker run -d -p 3000:3000 manoj201/scaniatest:latest
