--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -3,9 +3,12 @@ kind: Component
 metadata:
   name: scania-test
   description: This is hellow world app
-  annotations:
-    backstage.io/dockerfile-location: /Dockerfile
-    backstage.io/techdocs-ref: url:https://github.com/Manoj201/sc-test
+  metadata:
+    annotations:
+      github.com/project-slug: Manoj201/sc-test
+      backstage.io/dockerfile-location: /Dockerfile
+      backstage.io/techdocs-ref: url:https://github.com/Manoj201/sc-test
+
 spec:
   type: service
   lifecycle: experimental
