--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -5,6 +5,8 @@ metadata:
   description: This is hellow world app
   annotations:
     github.com/project-slug: Manoj201/sc-test
+    backstage.io/dockerfile-location: /Dockerfile
+    backstage.io/techdocs-ref: url:https://github.com/Manoj201/sc-test
 
 spec:
   type: service
