--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,12 +1,10 @@
 name: CI/CD Pipeline
 
-# on:
-#   push:
-#     branches:
-#       - main
-
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
